# BagPype

./: pyproject.toml  setup.py
src/bagpype/: __init__.py  construction.py  covalent.py  legacycode.py  makemultimer.py  parameters.py  parsing.py
