[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bagpype"
version = "1.0.1"
requires-python = ">=3.8"
authors = [
    {name = "Ben Amor"},
    {name = "Francesca Vianello"},
    {name = "Florian Song", email = "florian.song@gmail.com"}
]
description = "Biomolecular, atomistic graph construction software in Python for proteins, etc."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "pandas",
    "PyCifRW",
    "requests"
]

[project.urls]
Repository = "https://floriansong.github.io/BagPype/"

[tool.setuptools.packages]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bagpype = ["./dependencies/*", "./dependencies/mmcif/*"]

